fix for safari svg layout issue

--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -98,9 +98,6 @@ header.siteheader {
 }
 
 .logo-svg {
-  height: 100%;
-  width: auto;
-
   path {
     fill: $banner-fg;
     // filter: drop-shadow(4px 4px 2px rgba(6, 6, 6, .7));
