--- a/_sass/layout/_siteheader_layout.scss
+++ b/_sass/layout/_siteheader_layout.scss
@@ -3,7 +3,12 @@ header.siteheader .siteheader-layout {
   height: 100%;
 
   .logo-container {
-    flex: 0 0 calc( 110px + 3ch );
+    flex: 0 0 calc( 110px + 2ch );
+    .logo-svg {
+      height: 100%;
+      width: 100%;
+      margin-left: -1ch;
+    }
   }
 
   .brand {
